[gd_scene load_steps=63 format=2]

[ext_resource path="res://Assets/golem_die.png" type="Texture" id=1]
[ext_resource path="res://Assets/golem_move.png" type="Texture" id=2]
[ext_resource path="res://Assets/golem_attack.png" type="Texture" id=3]
[ext_resource path="res://StateMachine/StateMachine.gd" type="Script" id=4]
[ext_resource path="res://Enemies/Golem.gd" type="Script" id=5]
[ext_resource path="res://Enemies/Golem_Die.gd" type="Script" id=6]
[ext_resource path="res://Enemies/Golem_Move.gd" type="Script" id=7]
[ext_resource path="res://Enemies/Golem_Attack.gd" type="Script" id=8]

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 400, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 480, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 560, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 640, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 720, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 800, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 880, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 960, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1040, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1120, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 576, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 704, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 832, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=85]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 896, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 960, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=87]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=88]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1088, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=89]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1152, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=90]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1216, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=91]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1280, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=92]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1344, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=93]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1408, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=94]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1472, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=95]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1536, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=96]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1600, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=97]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1664, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=98]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1728, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=99]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=100]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=101]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=102]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=103]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=104]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=105]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=106]
animations = [ {
"frames": [ SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ) ],
"loop": false,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ) ],
"loop": false,
"name": "Die",
"speed": 15.0
}, {
"frames": [ SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ) ],
"loop": true,
"name": "Move",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=53]
extents = Vector2( 73.5, 93 )

[sub_resource type="RectangleShape2D" id=54]
extents = Vector2( 66, 107 )

[node name="Golem" type="KinematicBody2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 5, 5 )
frames = SubResource( 106 )
animation = "Die"
frame = 27
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, -31 )
shape = SubResource( 53 )

[node name="Attack" type="RayCast2D" parent="."]
position = Vector2( 0, -50 )
enabled = true
cast_to = Vector2( 150, 0 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Timer" type="Timer" parent="StateMachine/Attack"]
wait_time = 2.25
one_shot = true

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Above_and_Below" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Above_and_Below"]
position = Vector2( 4, -31 )
shape = SubResource( 54 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="StateMachine/Attack/Timer" to="StateMachine/Attack" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Above_and_Below" to="." method="_on_Above_and_Below_body_entered"]
